# IntelligentCPaaS

./: AI_BRAIN_HEART_ARCHITECTURE.md  AMPLIFY_QUICK_DEPLOY.md  AMPLIFY_STAGING_DEPLOYMENT.md  ARCHITECTURE_DIAGRAMS_README.md  AWS_ARCHITECTURE_COMPLETE.md  AWS_ARCHITECTURE_WITH_ICONS.drawio  AWS_CDS_TECHNICAL_MOAT.md  AWS_DEPLOYMENT_PLAN.md  AWS_HOSTED_DEPLOYMENT_GUIDE.md  AWS_ICONS_ARCHITECTURE_GUIDE.md  AWS_SOLUTION_DIAGRAM_PRESENTATION.drawio  AWS_STAGING_COMPLETE.md  CDS_REVENUE_MOAT_STRATEGY.md  CONTEXT_TRANSFER_SESSION_2.md  CONTEXT_TRANSFER_SESSION_3.md  COST_AND_TPS_FIXES_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DRAWIO_DIAGRAM_COMPLETE.md  DRAWIO_USAGE_GUIDE.md  EC2_DEPLOYMENT_GUIDE.md  FEEDBACK_LOOP_VISUAL.md  GITLAB_PUSH_FINAL_STATUS.md  GITLAB_PUSH_INSTRUCTIONS.md  GITLAB_PUSH_STATUS.md  INTERNAL_GITLAB_AMPLIFY_WORKAROUND.md  LOCAL_SERVER_VALIDATION.md  Makefile  PRESENTATION_DIAGRAM.drawio  PRESENTATION_DIAGRAM_COMPLETE.md  PRESENTATION_DIAGRAM_GUIDE.md  PRODUCTION_ARCHITECTURE_DRAWIO.xml  README.md  ROI_ANALYSIS_1M_USERS.md  SEND_CAMPAIGN_UI_IMPROVEMENTS.md  TASK_17_4_1_DEPLOYMENT_GUIDE.md  TASK_17_4_INFRASTRUCTURE_READY.md  WORKSPACE_DEPLOYMENT_GUIDE.md  amplify.yml  example_aws_messaging.py  pyproject.toml  (+5 more)
assets/: Agentic-AI-CPaaS-Demo.textClipping  CPaas-Final.drawio
data/demo/: campaign_scenarios.json  demo_scenarios.json  enriched_customers.json  segments.json  sku_promotions_rag.json  whatsapp_templates.json
infrastructure/: deploy.sh
infrastructure/cloudformation/: messaging-infrastructure.yaml
src/ai_cpaas_demo/: __init__.py
src/ai_cpaas_demo/agents/: __init__.py  base.py  campaign_orchestration.py  cost_optimization.py  customer_protection.py
src/ai_cpaas_demo/api/: __init__.py  main.py
src/ai_cpaas_demo/config/: __init__.py  settings.py
src/ai_cpaas_demo/core/: __init__.py  interfaces.py  models.py
src/ai_cpaas_demo/data/: README.md  __init__.py  campaign_generator.py  customer_generator.py  data_seeder.py  demo_query.py  demo_scenarios.py  generate_campaign_data.py  generate_demo_data.py  generate_demo_scenarios.py  location_sku_enrichment.py  seed_demo_data.py
src/ai_cpaas_demo/engines/: __init__.py
src/ai_cpaas_demo/engines/adaptation/: __init__.py  aws_native.py  base.py  message_generator.py  (+1 more)
src/ai_cpaas_demo/integrations/: __init__.py
src/ai_cpaas_demo/messaging/: __init__.py  aws_messaging.py  aws_ses.py  delivery_tracker.py  rate_limiter.py
src/ai_cpaas_demo/services/: __init__.py
src/ai_cpaas_demo/web/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/integration/: test_data_seeding.py
tests/property/: __init__.py  test_prediction_properties.py
tests/unit/: test_fatigue_protection.py  test_models.py
(+17 files in other folders)
